# Detector_Pessoas

./: README.md  pyproject.toml
src/ia_m_uv/: main.py  utils.py
src/ia_m_uv/algoritmos/: gemini_integration.py
